refactor: replaced code that's only available with java 16